grammar.js
    document: $ => seq(
      optional($.zeroth_section),
      repeat($.heading),
    ),

    // §3 Headings
    heading: $ => prec.right(seq(
      field('stars', $.stars),
      $._S,
      optional(field('todo', $.todo_keyword)),
      optional(field('priority', $.priority)),
      optional(field('comment', $.comment_keyword)),
      optional(field('title', $._heading_title)),
      optional(field('tags', $.tags)),
      $._NL,
      optional(field('planning', $.planning)),
      optional(field('properties', $.property_drawer)),
      repeat($.blank_line),
      optional(field('body', $.section)),
      repeat($.heading),
      optional($._HEADING_END),
    )),

    // stars: emitted by external scanner (column 0 + '*'+)
    // Declared in externals — no grammar rule needed.

    todo_keyword: $ => seq(
      $._TODO_KW,
      $._S,
    ),

    _heading_title: $ => repeat1($._object_nolb),

    zeroth_section: $ => prec.left(repeat1(choice(
      $._zs_content,
      $.blank_line,
    ))),

    section: $ => prec.left(repeat1(choice(
      $._section_content,
      $.blank_line,
    ))),

    _zs_content: $ => choice(
      $.indent,
      $._zs_element_no_block,
    ),

    _section_content: $ => choice(
      $.indent,
      $._section_element_no_block,
    ),

    // §5 Element Dispatch
    indent: $ => prec.right(seq(
      field('indent', alias($._INDENT_BEGIN, $.whitespace)),
      $._block,
    )),

    _block: $ => seq(
      field('body', choice(
        $.blank_line,
        $.indent,
        $._block_section_element_no_block,
      )),
      repeat(field('body', choice(
        $.blank_line,
        $.indent,
        prec(-6, seq($._INDENT, $.property_drawer)),
        prec(-5, seq($._INDENT_CONTENT_CONTINUE, $._block_section_element_no_block)),
      ))),
      $._INDENT_END,
    ),

    drawer: $ => seq(
      token(prec(2, ':')),
      field('name', alias($._DRAWER_NAME, $.drawer_name)),
      choice(
        seq(':', $._NL),
        seq(':', field('body', $.drawer_start_text), $._NL),
      ),
      $._DRAWER_ENTER_SYNC,
      field('body', optional($._drawer_body)),
      choice(
        seq(
          token(prec(2, /[ \t]*:end:/i)),
          optional(choice(
            $._TRAILING,
            field('end_text', alias($._REST_OF_LINE, $.plain_text)),
          )),
          $._NL,
          $._DRAWER_EXIT_SYNC,
        ),
        seq(
          alias($._HEADING_BOUNDARY_ABORT, $.ERROR),
          $._DRAWER_EXIT_SYNC,
        ),
      ),
    ),

    _DRAWER_NAME: _ => token(choice(
      /[A-DF-Za-df-z0-9_\-][A-Za-z0-9_\-]*/,
      /[Ee][A-MO-Za-mo-z0-9_\-][A-Za-z0-9_\-]*/,
      /[Ee][Nn][A-CE-Za-ce-z0-9_\-][A-Za-z0-9_\-]*/,
      /[Ee][Nn][Dd][A-Za-z0-9_\-]+/,
    )),

    drawer_start_text: _ => /[^\n]+/,

    _drawer_body: $ => repeat1($._drawer_body_line),

    _logbook_drawer_body: $ => repeat1($._logbook_drawer_body_line),

    drawer_kv_line: $ => prec(1, seq(
      ':',
      /[^:\n]+/,
      ':',
      choice(
        seq(
          $._S,
          choice(
            $.regular_link,
            $.timestamp,
            prec(-1, $._DRAWER_KV_REST),
          ),
        ),
        optional($._TRAILING),
      ),
      $._NL_or_EOI,
    )),

    _DRAWER_KV_REST: _ => /[^\n\[][^\n]*/,

    logbook_drawer: $ => seq(
      token(prec(3, ci(':logbook:'))),
      choice(
        $._NL,
        seq(field('body', $.drawer_start_text), $._NL),
      ),
      $._DRAWER_ENTER_SYNC,
      field('body', optional($._logbook_drawer_body)),
      choice(
        seq(
          token(prec(3, /[ \t]*:end:/i)),
          optional(choice(
            $._TRAILING,
            field('end_text', alias($._REST_OF_LINE, $.plain_text)),
          )),
          $._NL,
          $._DRAWER_EXIT_SYNC,
        ),
        seq(
          alias($._HEADING_BOUNDARY_ABORT, $.ERROR),
          $._DRAWER_EXIT_SYNC,
        ),
      ),
    ),

    // --- 6.4 Dynamic Blocks ---
    list: $ => prec.right(repeat1(field('item', $.list_item))),

    list_item: $ => prec.right(seq(
      field('bullet', $._bullet),
      optional(field('counter_set', $.counter_set)),
      optional(field('checkbox', $.checkbox)),
      choice(
        prec(1, seq(
          field('tag', $.item_tag),
          optional(field('first_line', $._item_first_line)),
          optional(field('first_line', alias($._TRAILING, $.plain_text))),
          $._NL_or_EOI,
        )),
        seq(
          optional(field('first_line', $._item_first_line)),
          optional(field('first_line', alias($._TRAILING, $.plain_text))),
          $._NL_or_EOI,
        ),
      ),
      optional(prec.dynamic(5, $._list_item_body)),
    )),

    _list_item_body: $ => seq(
      $._INDENT_BEGIN,
      $._block,
    ),

    _item_first_line: $ => repeat1($._object),

    _bullet: $ => choice(
      $.unordered_bullet,
      $._ordered_bullet,
    ),

    unordered_bullet: _ => token(/[+*-][ \t]+/),

    property_drawer: $ => prec(4, seq(
      token(prec(3, /[ \t]*:[Pp][Rr][Oo][Pp][Ee][Rr][Tt][Ii][Ee][Ss]:/)),
      optional($._TRAILING),
      $._NL,
      $._DRAWER_ENTER_SYNC,
      repeat(choice(
        $.blank_line,
        seq(optional($._INDENT), $.node_property),
      )),
      choice(
        seq(
          token(prec(3, /[ \t]*:end:/i)),
          optional(choice(
            $._TRAILING,
            field('end_text', alias($._REST_OF_LINE, $.plain_text)),
          )),
          $._NL,
          $._DRAWER_EXIT_SYNC,
        ),
        seq(
          alias($._HEADING_BOUNDARY_ABORT, $.ERROR),
          $._DRAWER_EXIT_SYNC,
        ),
      ),
    )),

    node_property: $ => seq(
      ':',
      field('name', alias($._PROP_NAME, $.property_name)),
      ':',
      choice(
        seq($._S, field('value', choice(
          prec(1, alias($._PROP_MALFORMED_LINK_REST, $.property_value)),
          seq(
            alias($._PROP_REGULAR_LINK, $.regular_link),
            optional(alias($._PROP_REST_OF_LINE, $.property_value)),
          ),
          $.timestamp,
          prec(-1, alias($._PROP_REST_OF_LINE, $.property_value)),
        ))),
        optional($._TRAILING),
      ),
      $._NL_or_EOI,
    ),

    _PROP_REST_OF_LINE: _ => /[^\n\[][^\n]*/,

    _PROP_MALFORMED_LINK_REST: _ => choice(
      /\[\[[^\n]*\]\]\][^\n]*/,
      /\[\[[^\n]*\[\[[^\n]*/,
    ),

    _PROP_REGULAR_LINK: $ => prec(1, choice(
      seq('[[', field('path', alias($._PROP_LINK_PATH, $.link_path)), ']]'),
      seq(
        '[[',
        field('path', alias($._PROP_LINK_PATH, $.link_path)),
        '][',
        field('description', $._link_description),
        ']]',
      ),
    )),

    _PROP_NAME: _ => /[^ \t\n:+]+\+?/,

    // --- 6.7 Tables ---
    // $._TABLE_START is a zero-width scanner-gated token emitted exactly once
    // when entering a new org_table.  It tracks in_table state so that
    // consecutive '|'-rows are merged into one org_table rather than creating
    // separate nodes for each row (which is what happens when GLR explores
    // multiple parse paths within zeroth_section / section).
    paragraph: $ => prec(-1, repeat1($._paragraph_line)),

    _paragraph_line: $ => seq(
      choice(
        $._timestamp_paragraph_line,
        repeat1($._object),
        $._indented_object_line,
      ),
      $.newline,
    ),

    line_break: _ => seq(token(prec(1, '\\\\')), /[ \t]*/),

    // --- 8.7 Links ---
    regular_link: $ => choice(
      seq('[[', field('path', alias($._link_path, $.link_path)), ']]'),
      seq(
        '[[',
        field('path', alias($._link_path, $.link_path)),
        '][',
        field('description', $._link_description),
        ']]',
      ),
    ),

    _link_path: _ => /([^\[\]]|\\.)*/,

    _link_description: $ => repeat1(choice(
      alias($._LINK_DESC_TEXT, $.plain_text),
      ']',
      alias($._NL, $.newline), // plain _NL (not _NL_or_EOI) to prevent zero-width loop at EOF in fuzzer
    )),

    timestamp: $ => choice(
      $._active_range,
      $._inactive_range,
      $._active_range_sameday,
      $._inactive_range_sameday,
      $._active_ts,
      $._inactive_ts,
    ),

    _active_ts: $ => seq('<', $._ts_inner, '>'),
    _active_range: $ => seq('<', $._ts_inner, '>', '--', '<', $._ts_inner, '>'),
    _active_range_sameday: $ => seq(
      '<', $._ts_date, $._S,
      field('time_start', alias($._ts_time, $.ts_time)), '-',
      field('time_end', alias($._ts_time, $.ts_time)),
      optional(seq($._S, $._ts_modifiers)), '>',
    ),

    _inactive_ts: $ => seq('[', $._ts_inner, ']'),
    _inactive_range: $ => seq('[', $._ts_inner, ']', '--', '[', $._ts_inner, ']'),
    _inactive_range_sameday: $ => seq(
      '[', $._ts_date, $._S,
      field('time_start', alias($._ts_time, $.ts_time)), '-',
      field('time_end', alias($._ts_time, $.ts_time)),
      optional(seq($._S, $._ts_modifiers)), ']',
    ),

    plain_text: $ => $._PLAIN_TEXT,

    // §9 Object Sets
    newline: $ => $._NL_or_EOI,
    blank_line: $ => $._blank_line,

    // §10 Lexical Primitives
    _S: _ => /[ \t]+/,
    _NL: _ => /\n/,
    // _NL_or_EOI is used in every position where _NL is the final token of a
    // complete element, so that elements at the end of a file without a
    // trailing newline parse cleanly.  Structural separators (block begin
    // lines, drawer open/close, footnote body, _fn_ref_def, _link_description)
    // keep plain _NL to avoid ambiguity and potential zero-width loops in
    // repeat1 rules.
    _NL_or_EOI: $ => choice($._NL, $._EOI),
    _INDENT: _ => token(prec(-1, /[ \t]+/)),
    _TRAILING: _ => /[ \t]+/,
    _REST_OF_LINE: _ => /[^\n]+/,

    _blank_line: _ => token(prec(-1, /[ \t]*\n/)),
